# UMLDiagramCreator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
case_studies/parselmouth/: README.md  parselmouth_probe_config.json  run_parselmouth_probe.py
docs/: html_controls.md  python_static_analysis.md
examples/simple_project/: __init__.py  main.py  models.py  services.py  utils.py
scripts/pyreverse_demo/: generar_pyreverse_numpy_polynomial.py  generar_pyreverse_simple_project.py
src/uml_diagram_creator/: __init__.py  cli.py
src/uml_diagram_creator/analyzer/: __init__.py  ast_parser.py  call_graph.py  class_graph.py  cmake_graph.py  graph_utils.py  import_graph.py  model.py  project_graph.py  pybind11_graph.py  repo_scan.py
src/uml_diagram_creator/export/: __init__.py  writers.py
src/uml_diagram_creator/integrations/: __init__.py  pyreverse_runner.py
src/uml_diagram_creator/profiles/: __init__.py  generic.py
src/uml_diagram_creator/render/: __init__.py  html_renderer.py  mathmongo_controls.py  palettes.py
tests/: test_native_architecture.py  test_pyreverse_runner.py  test_static_analysis.py
tests/fixtures/native_extension_project/: CMakeLists.txt  pyproject.toml
tests/fixtures/native_extension_project/python_package/: __init__.py
tests/fixtures/native_extension_project/src/: CMakeLists.txt  Sound.cpp  Sound.h  bindings.cpp
tests/fixtures/native_extension_project/tests/: test_basic.py
