[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uml-diagram-creator"
version = "0.1.0"
description = "Static Python code graph explorer with interactive HTML output."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "EnriqueDO" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
pyreverse = ["pylint>=3"]

[project.scripts]
umlgraph = "uml_diagram_creator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
